2008-06-12  Daniel Steffen  <das@users.sourceforge.net>

	* unix/tcl.m4 (SunOS-5.11): fix 64bit amd64 support with gcc & Sun cc.
	* unix/configure: autoconf-2.59

	* macosx/tkMacOSXXStubs.c (Tk_ResetUserInactiveTime): use UsrActivity
	instead of OverallAct (which may be ignored in some circumstances).

	* macosx/Wish.xcodeproj/project.pbxproj: add debug configs for 64bit,
	* macosx/Wish.xcodeproj/default.pbxuser: with gcov, and with
	corefoundation disabled; updates & cleanup for Xcode 3.1 and for
	Leopard; sync with Tcl.xcodeproj.
	* macosx/Wish.xcode/project.pbxproj:	sync Wish.xcodeproj changes.
	* macosx/Wish.xcode/default.pbxuser:
	* macosx/README:			document new build configs.

2008-06-10  Joe English  <jenglish@users.sourceforge.net>

	* unix/tkUnixKey.c: tkUnixKey.c: Use Xutf8LookupString if available
	[Patch #1986818].  This should fix problems (like #1908443) where
	Xlib's idea of the system encoding does not match Tcl's.

2008-05-23  Joe English  <jenglish@users.sourceforge.net>

	* generic/ttk/ttkLabel.c: Avoid passing width or height <= 0 to 
	Tk_RedrawImage, as this leads to a panic on Windows [Bug 1967576]

2008-05-11  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* library/tk.tcl: Support for ttk widgets in AmpWidget

	* doc/button.n: Note negative widths for button [Patch #1883418]
	* doc/ttk_*:   'identify' widget command is on all ttk widgets.

2008-05-04  Joe English  <jenglish@users.sourceforge.net>

	* macosx/ttkMacOSAquaTheme.c: "default" and "focus" adornments
	should not be disjoint [Bug 1942785]

2008-04-17  Don Porter  <dgp@users.sourceforge.net>

	* generic/tkCanvas.c:   Fix logic that determines when canvas item
	<Enter> event should fire.  Thanks to Sebastian Wangnick. [Bug 1327482]

2008-04-14  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* win/tkWinDialog.c: backport tk_chooseColor -title fix from head
	* win/tkWinTest.c:   Added parent to testgetwininfo
	* tests/winDialog.test: Created some tk_chooseColor win tests.
